--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import url(stylesheets/reset.css);*{box-sizing:border-box}html,body,#root,.App,.wrapper{width:100%;height:100%}.wrapper{display:flex}.category{display:block;width:15%;height:100%;padding:20px 0px;background:#2B2D2F}.main{width:65%;background:red}.toolbar{width:20%}.category .setting-category{border:0;background:transparent;outline:none;width:24px;height:24px}.category .list{color:#DBDBDC;width:100%}.category .list .title{width:100%;display:flex;align-items:center;justify-content:space-between}.category .list ul{width:100%;padding:0;margin:0;list-style:none}.category .list ul a{text-decoration:none}.category .list ul .active .item{background:#4D4E50}.category .list .item{padding:15px;padding-left:30px;display:flex;align-items:center}.category .list .item span{color:#DBDBDC}.category .list .item img{margin-right:10px}
